--- a/style.css
+++ b/style.css
@@ -263,8 +263,15 @@ span{
     box-shadow: 0 0 18px #DFB6DC;
 }
 
+.social-cv{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+
 /* ================= BUTTON ================= */
-.dl-cv{
+.dl-cv {
     display: inline-block;
     padding: 1.1rem 3.4rem;
     font-size: 1.7rem;
@@ -274,8 +281,9 @@ span{
     color: rgb(3, 3, 24);
     transition: 0.3s ease;
     text-decoration: none;
-    margin-top: 1.5rem; /* spacing from above elements */
+    margin-top: 2rem; 
 }
+
 
 .dl-cv:hover{
     background: #6B91AE;
